# cqlite

./: .gitignore  ARCHITECTURE.md  BINARY_FORMAT_ANALYSIS.md  BTI_FORMAT_SPECIFICATION.md  CASSANDRA_COMPATIBILITY_GUIDE.md  CASSANDRA_COMPATIBILITY_MATRIX.md  CASSANDRA_FORMAT_RESEARCH_SUMMARY.md  CLAUDE_FLOW_VALIDATION_PROMPT.md  CLI_TOOL_SPEC.md  COLLECTION_IMPLEMENTATION_REPORT.md  COMPATIBILITY_ANALYSIS_REPORT.md  COMPLEX_TYPES_INTEGRATION_PLAN.md  COMPLEX_TYPES_PERFORMANCE.md  COMPREHENSIVE_VALIDATION_PLAN.md  CQLITE_VALIDATION_REPORT.md  CQL_PARSER_IMPLEMENTATION.md  Cargo.toml  EXECUTIVE_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  Justfile  M3_COMPLETION_UPDATE.md  M3_COMPLEX_TYPE_VALIDATION_REPORT.md  M3_PERFORMANCE_OPTIMIZATION_SUMMARY.md  MILESTONE_TRACKER.md  PRD.md  PROOF_OF_CONCEPT_REPORT.md  PROOF_OF_CONCEPT_SUCCESS.md  QA_VALIDATION_REPORT.md  README.md  ReviewNotes.md  SSTABLE_TEST_SUMMARY.md  TECHNICAL_ANALYSIS.md  TROUBLESHOOTING_GUIDE.md  UDT_FORMAT_SPEC.md  VALIDATION_GUIDE.md  WRITER_COMPATIBILITY_ANALYSIS.md  complex_schema.cql  cqlite-validator  example_schema.json  run_integration_tests.sh  (+24 more)
cqlite-cli/: CLI_TESTING_GUIDE.md  CLI_USAGE_EXAMPLES.md  COMPATIBILITY_TESTING_GUIDE.md  Cargo.toml
cqlite-cli/.github/workflows/: cassandra-compatibility.yml
cqlite-cli/.swarm/: memory.db-shm  memory.db-wal
cqlite-cli/cqlite-nodejs/: .gitignore  Cargo.toml  README.md  index.d.ts  jest.config.js  package.json
cqlite-cli/cqlite-nodejs/examples/: basic-usage.js  express-api.js  streaming.js  typescript-example.ts
cqlite-cli/cqlite-nodejs/lib/: index.js
cqlite-cli/cqlite-nodejs/scripts/: setup.js
cqlite-cli/cqlite-nodejs/src/: lib.rs
cqlite-cli/cqlite-nodejs/test/: basic.test.js  queries.test.js  setup.js
cqlite-cli/cqlite-python/: Cargo.toml  README.md  pyproject.toml
cqlite-cli/cqlite-python/examples/: async_queries.py  basic_usage.py  pandas_integration.py
cqlite-cli/cqlite-python/src/: async_support.rs  errors.rs  exports.rs  lib.rs  query.rs  reader.rs  types.rs
cqlite-cli/cqlite-python/tests/: test_basic.py  test_queries.py  test_types.py
cqlite-cli/src/: cli.rs  config.rs  data_parser.rs  formatter.rs  interactive.rs  main.rs  query_executor.rs  tui.rs
cqlite-cli/src/commands/: admin.rs  bench.rs  docker.rs  mod.rs  schema.rs  (+1 more)
cqlite-cli/tests/: end_to_end_tests.rs  error_handling_tests.rs  integration_sstable_tests.rs  integration_tests.rs  run_comprehensive_cli_tests.sh  test_helpers.rs  test_runner.rs  unit_tests.rs
cqlite-core/: Cargo.toml  PERFORMANCE_ANALYSIS_SUMMARY.md  PERFORMANCE_BENCHMARK_REPORT.md
cqlite-core/examples/: parser_capabilities_demo.rs  parser_pipeline_test.rs  parser_proof.rs  test_basic_parser.rs
cqlite-core/src/: config.rs  error.rs  lib.rs  memory_safety_runner.rs  memory_safety_tests.rs  types.rs  types_enhanced.rs
cqlite-core/tests/: cassandra_compatibility.rs  compression_integration.rs  parser_abstraction_tests.rs  parsing_improvements_test.rs
cqlite-ffi/: Cargo.toml
cqlite-ffi/src/: database.rs  error.rs  iterator.rs  lib.rs  query.rs  schema.rs  types.rs  utils.rs
cqlite-wasm/: Cargo.toml
cqlite-wasm/src/: database.rs  lib.rs  query.rs  storage.rs  types.rs  utils.rs
proof-of-concept/: Cargo.toml
proof-of-concept/src/: lib.rs  performance.rs  test_data.rs  validation.rs
testing-framework/: Cargo.toml
testing-framework/src/: cli.rs  comparator.rs  comparison.rs  config.rs  docker.rs  error.rs  executor.rs  integration_test.rs  lib.rs  main.rs  output.rs  reporter.rs  test_case.rs  utils.rs
tests/: CQL_VALIDATION_README.md  Cargo.toml  EDGE_CASE_TESTING.md  README.md  run_parser_validation.sh  run_performance_tests.sh
tests/benchmarks/: compatibility_testing.rs  end_to_end_bench.rs  load_testing.rs  performance_suite.rs
tests/bulletproof/: test_bulletproof_integration.rs  test_bulletproof_reader.rs  test_bulletproof_standalone.rs
tests/cassandra-cluster/: Dockerfile.cqlite-tester  README.md  docker-compose.yml
tests/e2e/: README.md  agentic_framework.rs  agentic_test_runner.rs  cross_language_suite.js  cross_language_suite.py  mod.rs  test_data_generator.rs
tests/format-compatibility/: Cargo.toml
tests/integration/: cli_tests.rs  performance_integration.rs  test-integration.rs  test_collection_parsing.rs  test_compression_info.rs  test_compression_integration.rs  test_compression_parsing.rs  test_compression_parsing_v2.rs  test_compression_parsing_v3.rs  test_cql_parser_syntax.rs  test_cqlite_parser.rs  test_data_db_enhanced.rs  test_docker_integration.rs  test_enhanced_statistics.rs  test_enhanced_validation.rs  test_type_extensions.rs  test_udt_simple.rs
tests/m3_validation/: cassandra_test_setup.py  complex_type_validation_tests.rs
tests/real-world-data/: generate-production-datasets.py
tests/src/: advanced_edge_case_tests.rs  bti_validation.rs  cli_integration_tests.rs  collection_compatibility_tests.rs  compatibility_framework.rs  complex_data_test.rs  complex_type_validation_suite.rs  comprehensive_integration_test_suite.rs  comprehensive_integration_tests.rs  comprehensive_parser_integration_tests.rs  cql_integration_tests.rs  cql_parser_validation_suite.rs  cql_performance_benchmarks.rs  cql_test_data_fixtures.rs  edge_case_data_types.rs  edge_case_runner.rs  edge_case_sstable_corruption.rs  edge_case_stress_testing.rs  format_verifier.rs  integration_e2e.rs  integration_runner.rs  integration_test_harness.rs  lib.rs  m3_performance_validator.rs  parser_validation.rs  performance_benchmark_runner.rs  performance_benchmarks.rs  performance_complex_types_benchmark.rs  performance_monitor.rs  performance_regression_framework.rs  performance_validation_suite.rs  real_cassandra_data_validator.rs  real_sstable_compatibility_test.rs  real_sstable_test_fixtures.rs  sstable_benchmark.rs  sstable_format_tests.rs  sstable_validator.rs  type_system_tests.rs  validation_test_runner.rs
tests/standalone/: cqlite-validator.rs  simple_sstable_test.rs  simple_vint_demo.rs  sstable_validator_standalone.rs  standalone_vint_demo.rs
tools/format-validator/: Cargo.toml
(+304 files in other folders)
