[workspace]
members = [
    "cqlite-core",
    "cqlite-ffi", 
    "cqlite-wasm",
    "cqlite-cli",
    "bindings/python",
    "bindings/nodejs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CQLite Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cqlite/cqlite"
keywords = ["database", "embedded", "sstable", "wasm"]
categories = ["database-implementations", "embedded", "wasm"]
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"

# Storage and compression
lz4_flex = "0.11"
crc32fast = "1.3"

# Collections and data structures
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Memory management
bytes = "1.4"
memmap2 = "0.9"

# Testing
criterion = "0.5"
proptest = "1.0"

# FFI
libc = "0.2"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.bench]
debug = true