[package]
name = "cqlite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core database engine for CQLite"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Compression and checksums
lz4_flex = { workspace = true }
snap = { version = "1.1", optional = true }
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.13", optional = true }
crc32fast = { workspace = true }

# Concurrency and collections
crossbeam = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Memory management
bytes = { workspace = true }
memmap2 = { workspace = true }

# Parsing
nom = "7.1"
hex = "0.4"
bit-vec = "0.8"
num_cpus = "1.0"
base64 = "0.21"

# Additional dependencies
uuid = { version = "1.10", features = ["v4"] }
regex = "1.10"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
env_logger = { workspace = true }

# Optional WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["console"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3.8"

[[bin]]
name = "memory_safety_validator"
path = "src/bin/memory_safety_validator.rs"

[[bin]]
name = "benchmark_streaming"
path = "src/bin/benchmark_streaming.rs"

[[bin]]
name = "test_streaming_performance"
path = "src/bin/test_streaming_performance.rs"

[features]
default = ["compression", "lz4", "metrics"]
compression = []
lz4 = []
snappy = ["snap"]
deflate = ["flate2"]
zstd = ["dep:zstd"]
metrics = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]