[package]
name = "cqlite-testing-framework"
version = "0.1.0"
edition = "2021"
description = "Automated testing framework for comparing cqlsh and cqlite outputs"

[[bin]]
name = "cqlite-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }