[package]
name = "cqlite-nodejs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14", default-features = false, features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2.14"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Use our core cqlite library
cqlite-core = { path = "../cqlite-core" }

[build-dependencies]
napi-build = "2.14"