[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cqlite"
version = "0.1.0"
description = "🚀 FIRST EVER: Direct SSTable querying for Cassandra - Execute SELECT statements on SSTable files!"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "CQLite Team", email = "support@cqlite.dev"},
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.20.0",
    "pyarrow>=10.0.0",  # For Parquet export
    "aiofiles>=0.8.0",  # For async file operations
]
keywords = ["cassandra", "sstable", "database", "query", "analytics", "big-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/cqlite/cqlite"
Documentation = "https://docs.cqlite.dev"
Repository = "https://github.com/cqlite/cqlite"
Issues = "https://github.com/cqlite/cqlite/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=4.0.0",
]
pandas = ["pandas>=1.0.0"]
numpy = ["numpy>=1.20.0"] 
parquet = ["pyarrow>=10.0.0"]
async = ["aiofiles>=0.8.0", "asyncio"]
all = [
    "pandas>=1.0.0",
    "numpy>=1.20.0", 
    "pyarrow>=10.0.0",
    "aiofiles>=0.8.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "cqlite._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true