[package]
name = "format-compatibility-tests"
version = "0.1.0"
edition = "2021"
description = "Comprehensive format compatibility tests for Cassandra 5+"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
pretty_assertions = "1.4"
anyhow = "1.0"

[dependencies.cqlite-core]
path = "../../cqlite-core"

[dependencies.format-validator]
path = "../../tools/format-validator"

[[bench]]
name = "format_parsing"
harness = false

[[test]]
name = "oa_format_compliance"
path = "tests/oa_format_compliance.rs"

[[test]]
name = "bti_format_compliance"
path = "tests/bti_format_compliance.rs"

[[test]]
name = "compression_compatibility"
path = "tests/compression_compatibility.rs"

[[test]]
name = "vint_encoding_compliance"
path = "tests/vint_encoding_compliance.rs"