[package]
name = "format-validator"
version = "0.1.0"
edition = "2021"
description = "Cassandra 5+ SSTable format validation toolkit"

[[bin]]
name = "hex-analyzer"
path = "src/bin/hex_analyzer.rs"

[[bin]]
name = "format-checker"
path = "src/bin/format_checker.rs"

[[bin]]
name = "deviation-detector"
path = "src/bin/deviation_detector.rs"

[[bin]]
name = "benchmark-validator"
path = "src/bin/benchmark_validator.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
nom = "7.1"
crc32fast = "1.3"
byteorder = "1.5"
memmap2 = "0.9"
colored = "2.0"
indicatif = "0.17"
pretty_hex = "0.4"

[dependencies.cqlite-core]
path = "../../cqlite-core"