[package]
name = "sstable-validation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "validate_all_types"
path = "src/validate_all_types.rs"

[[bin]]
name = "validate_collections"
path = "src/validate_collections.rs"

[[bin]]
name = "validate_users"
path = "src/validate_users.rs"

[[bin]]
name = "validate_time_series"
path = "src/validate_time_series.rs"

[[bin]]
name = "validate_large_table"
path = "src/validate_large_table.rs"

[[bin]]
name = "validate_all"
path = "src/validate_all.rs"

[dependencies]
cqlite-core = { path = "../../../cqlite-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }