[package]
name = "cqlite-validation-tests"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "cassandra_sstable_validator"
path = "cassandra_sstable_validator.rs"

[[bin]]
name = "real_cqlite_parser_test"
path = "real_cqlite_parser_test.rs"

[[bin]]
name = "cqlite_integration_test"
path = "cqlite_integration_test.rs"

[[bin]]
name = "real_sstable_validation"
path = "real_sstable_validation.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cqlite-core = { path = "../../../cqlite-core" }
chrono = { version = "0.4", features = ["serde"] }